--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -35,6 +35,8 @@ justify-content: space-between;
     border: 0px;
     border-radius: 30px;
     height: 150px;
+    justify-content: center;
+    align-items: center;
     
     
 }
