--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,10 +1,11 @@
 .NavBarBackground {
-    display: flexbox;
+    
     align-items: center;
     padding: 20px;
-    flex-direction: column;
     background-color: black;
-    width: max-content;
+    width: fit-content;
+    margin: 0px;
+    border: 0px;
 }
 
 .NavButton {
