--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,28 @@
 
-.NavContent{
-  display: flexbox;
+.Everything{
+  display: flex;
+  justify-content: center;
+}
 
+.NavContent{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 .NavBar{
   flex: auto;
   flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.Header{
+width: 100%;
+}
+
+.CurrentView{
+  margin-top: 500px;
+  flex: auto;
 }
