--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,22 +1,30 @@
 .NavBarBackground {
-    
+    display: flex;
     align-items: center;
     padding: 20px;
-    background-color: black;
-    width: fit-content;
-    margin: 0px;
-    border: 0px;
+    background-color: blue;
+    width: 100%;
+    opacity: 80%;
+    position: fixed;
+    width: max-content;
+    border: 20px;
+    border-color: black;
+    margin-top: 150px;
 }
 
 .NavButton {
-    background-color: lightgray;
+    background-color: rgb(158, 171, 190);
     display: flex;
     flex: auto;
     margin: 10px;
-    width: 150px;
+    height: 75px;
+    width: 250px;
     align-items: center;
     justify-content: center;
-    font-size: medium;
-    font: 400;
     border-radius: 20px;
+    border: 5px;
+    border-color: black;
+    opacity: 100%;
+    font-size: xx-large;
+    font-weight: 900;
 }
