--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -16,6 +16,7 @@ align-items: center;
 justify-content: space-evenly;
 width: 100%;
 padding: 30px;
+position: fixed;
 }
 
 .LogoContainer{
@@ -26,14 +27,14 @@ padding: 30px;
     flex: auto;
     background-color: blue;
     border-color: black;
-    border-radius: 75px;
+    border-radius: 50%;
     height: 150px;
     width: 150px;
     margin: 100px;
 }
 
 .CompanyNameContainer{
-    display: block;
+    display: flex;
     border-color: black;
     background-color: blue;
     border: 0px;
@@ -48,7 +49,7 @@ padding: 30px;
 
 h1 {
     flex: auto;
-    font-size: 1.8rem;
+    font-size: 2.5rem;
     margin: 3px;
     justify-content: center;
     align-items: center;
