--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,13 +1,24 @@
 .Footer{
+    display: flex;
     position: fixed;
     bottom: 0;
     width: 100%;
     background-color: blue;  
-    height: 50px;  
+    height: fit-content;  
+    justify-content: space-around;
+    align-items: center;
 }
 
 .FooterLink {
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    flex: auto;
     color: black;
+    text-align: center;
+    text-decoration: none;
+    font-weight: 800;
 }
 
 .FooterLink:hover{
