--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -6,26 +6,23 @@
     width: 100%;
     opacity: 80%;
     position: fixed;
-    width: max-content;
-    border: 20px;
     border-color: black;
-    margin-top: 150px;
-    flex: 1 1 1;
+    margin-top: 100px;
+    flex: 1 1;
 }
 
 .NavButton {
     display: flex;
     flex: auto;
     margin: 10px;
-    height: 75px;
-    width: 250px;
+    width: 10%;
     align-items: center;
     justify-content: center;
-    border-radius: 20px;
-    border: 5px;
+    border-radius: 10px;
+    border: 3px;
     border-color: black;
     opacity: 100%;
-    font-size: xx-large;
+    font-size: large;
     font-weight: 900;
     background-color: blue;
     
